[gd_scene load_steps=11 format=3 uid="uid://denfsho0lhwb3"]

[ext_resource type="Script" uid="uid://4jc8lky1mrh2" path="res://scenes/shop.gd" id="1_1l46r"]
[ext_resource type="Texture2D" uid="uid://p15t38vn7740" path="res://assets/shop/shop.png" id="1_xfvoa"]
[ext_resource type="Texture2D" uid="uid://b08gdqtndgxay" path="res://assets/shop/npc.png" id="2_1l46r"]
[ext_resource type="PackedScene" uid="uid://cv5ew33d7pvhc" path="res://scenes/shop_menu.tscn" id="4_032fp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_032fp"]
atlas = ExtResource("1_xfvoa")
region = Rect2(0, 0, 16, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_2fc2m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_032fp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8r1wq"]
atlas = ExtResource("2_1l46r")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bdmwb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r1wq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_032fp"]
size = Vector2(101, 104.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_2fc2m"]
radius = 49.729267

[node name="shop" type="StaticBody2D"]
script = ExtResource("1_1l46r")

[node name="npc" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 2)
scale = Vector2(2.125, 2.125)
sprite_frames = SubResource("SpriteFrames_2fc2m")

[node name="shop_art" type="AnimatedSprite2D" parent="."]
position = Vector2(9.000001, -13)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_bdmwb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11, -12.75)
shape = SubResource("RectangleShape2D_032fp")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(11, 48)
shape = SubResource("CircleShape2D_2fc2m")

[node name="shop_menu" parent="." instance=ExtResource("4_032fp")]
position = Vector2(-47, -149)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
